# executable-finder

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  unix.rs  windows.rs
